Motoman/MotoComSDK/motocom32dll/Samples/MotocomDemoVCplusplus/MotoCom.h

/****************************************************/
/****************   BSC     *************************/
/****************************************************/
/* bsc3.h */
/*  "COM1:9600,E,8,1" */
DECSPCEX short APIENTRY BscCancel(short nCid);
DECSPCEX short APIENTRY BscChangeTask(short nCid,short task);
DECSPCEX short APIENTRY BscClose(short nCid);
DECSPCEX short APIENTRY BscCommand(short nCid,char *h_buf,char *d_buf,short fforever);
DECSPCEX short APIENTRY BscConnect(short nCid);
DECSPCEX short APIENTRY BscContinueJob(short nCid);
DECSPCEX short APIENTRY BscConvertJobP2R(short nCid,char *name,char *framename);
DECSPCEX short APIENTRY BscConvertJobR2P(short nCid,char *name,short cv_type,char *var_no);
DECSPCEX short APIENTRY BscDCIGetPos(short nCid,WORD *type,WORD *rconf,double *p);
DECSPCEX short APIENTRY BscDCIGetPos2(short nCid,WORD *type,WORD *rconf,double *p,short *axisNum); // MotoCom32.dll V3.53
DECSPCEX short APIENTRY BscDCIGetVarData(short nCid,WORD *type,WORD *rconf,double *p,char *s);		// T.Ariyoshi 
DECSPCEX short APIENTRY BscDCIGetVarDataEx(short nCid,WORD *type,DWORD *rconf,double *p,char *s,short *axisNum);
DECSPCEX short APIENTRY BscDCILoadSave(short nCid,short timec);
DECSPCEX short APIENTRY BscDCILoadSaveOnce(short nCid);
DECSPCEX short APIENTRY BscDCIPutPos(short nCid,WORD type,WORD rconf,double *p);
DECSPCEX short APIENTRY BscDCIPutPos2(short nCid,WORD type,WORD rconf,double *p,short axisNum); // MotoCom32.dll V3.53
DECSPCEX short APIENTRY BscDCIPutVarData(short nCid,WORD type,WORD rconf,double *p,char *s);		// T.Ariyoshi 
DECSPCEX short APIENTRY BscDCIPutVarDataEx(short nCid,WORD type,DWORD rconf,double *p,char *s,short axisNum);
//DECSPCEX short APIENTRY BscDelay(short nCid,DWORD a);
DECSPCEX short APIENTRY BscDeleteJob(short nCid);
DECSPCEX short APIENTRY BscDisConnect(short nCid);
DECSPCEX short APIENTRY BscDiskFreeSizeGet(short nCid,short dno,long *dsize);
DECSPCEX short APIENTRY BscDownLoad(short nCid,char *fname);
DECSPCEX short APIENTRY BscDownLoadEx(short nCid,char *fname, char *srcPath, BOOL nFlg); //981019
DECSPCEX short APIENTRY BscEnforcedClose(short nCid);
DECSPCEX short APIENTRY BscFindFirst(short nCid,char *fname,short size);
DECSPCEX short APIENTRY BscFindFirstMaster(short nCid,char *fname,short size);
DECSPCEX short APIENTRY BscFindNext(short nCid,char *fname,short size);
DECSPCEX short APIENTRY BscFindNextMaster(short nCid,char *fname,short size);
//DECSPCEX short APIENTRY BscGetAbso(short nCid,short axisno,long *abso);
DECSPCEX short APIENTRY BscGetCartPos(short nCid,char *framename,short isex,DWORD *rconf,WORD *toolno,double *p);
DECSPCEX short APIENTRY BscGetCtrlGroup(short nCid,WORD *groupinf,WORD *taskinf);
DECSPCEX short APIENTRY BscGetCtrlGroupDx(short nCid,DWORD *robtask,DWORD *stattask,WORD *taskinf);
DECSPCEX short APIENTRY BscGetCtrlGroupXrc(short nCid,WORD *robtask,WORD *stattask,WORD *taskinf);
DECSPCEX short APIENTRY BscGetError(short nCid);
DECSPCEX short APIENTRY BscGetError2(short nCid);//990224 Sakasegawa for XRC
DECSPCEX short APIENTRY BscGetFirstAlarm(short nCid,WORD *data);
DECSPCEX short APIENTRY BscGetFirstAlarmS(short nCid,WORD *data,char *s);							// T.Ariyoshi 
DECSPCEX short APIENTRY BscGetNextAlarm(short nCid, WORD *data);
DECSPCEX short APIENTRY BscGetNextAlarmS(short nCid,WORD *data,char *s);							// T.Ariyoshi 
DECSPCEX short APIENTRY BscGetPulsePos(short nCid,double *p);
DECSPCEX short APIENTRY BscGets(short nCid,char *bufptr,WORD bsize,WORD *plengets);
DECSPCEX short APIENTRY BscGetStatus(short nCid,WORD *d1,WORD *d2);
DECSPCEX short APIENTRY BscGetUFrame(short nCid,char *ufname,double *p);
DECSPCEX short APIENTRY BscGetVarData(short nCid,short type,short varno,double *pos);
DECSPCEX short APIENTRY BscGetVarData2(short nCid,short type,short varno,double *pos); // MotoCom32.dll V3.53
DECSPCEX short APIENTRY BscGetVarDataEx(short nCid,short type,short varno,double *pos,char *s,short *axisNum);
DECSPCEX short APIENTRY BscHoldOff(short nCid);
DECSPCEX short APIENTRY BscHoldOn(short nCid);
DECSPCEX short APIENTRY BscHostGetVarData(short nCid,short type,short varno,double *pos,char *s);	// T.Ariyoshi 
DECSPCEX short APIENTRY BscHostGetVarDataM(short nCid,short type,short varno,short num,double *pos);	// T.Ariyoshi 
DECSPCEX short APIENTRY BscHostPutVarData(short nCid,short type,short varno,double *dat,char *s);	// T.Ariyoshi 
DECSPCEX short APIENTRY BscHostPutVarDataM(short nCid,short type,short varno,short num,double *pos);	// T.Ariyoshi 
DECSPCEX short APIENTRY BscImov(short nCid,char *vtype,double spd,char *framename,short toolno,double *p);
DECSPCEX short APIENTRY BscImovEx(short nCid,char *vtype,double spd,char *framename,short toolno,double *p,short axisNum);
DECSPCEX short APIENTRY BscInBytes(short nCid);
DECSPCEX short APIENTRY BscIsAlarm(short nCid);
DECSPCEX short APIENTRY BscIsCtrlGroup(short nCid);
DECSPCEX short APIENTRY BscIsCtrlGroupDx(short nCid, DWORD *robtask,DWORD *stattask);
DECSPCEX short APIENTRY BscIsCtrlGroupXrc(short nCid, WORD *robtask,WORD *stattask);
DECSPCEX short APIENTRY BscIsCycle(short nCid);
DECSPCEX short APIENTRY BscIsError(short nCid);
DECSPCEX short APIENTRY BscIsErrorCode(short nCid);
DECSPCEX short APIENTRY BscIsHold(short nCid);
DECSPCEX short APIENTRY BscIsJobLine(short nCid);
DECSPCEX short APIENTRY BscIsJobName(short nCid,char *jobname,short size);
DECSPCEX short APIENTRY BscIsJobStep(short nCid);
DECSPCEX short APIENTRY BscIsLoc(short nCid,short ispulse,WORD *rconf,double *p);
DECSPCEX short APIENTRY BscIsPlayMode(short nCid);
DECSPCEX short APIENTRY BscIsRemoteMode(short nCid);